# claude-code-tracer

./: .env.example  .gitattributes  .gitignore  ARCHIVE_NOTES.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  capture_claude_api.py  claude_tracer.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  view_session.py
.github/workflows/: ci.yml  release.yml
config/: privacy.yml
database/: schema.sql
database/migrations/: 001_initial_schema.sql  002_analytics_tables.sql  003_views_and_functions.sql
docs/: api.md  architecture.md  development.md  setup.md  usage.md
scripts/: setup_db.py
src/claude_code_tracer/: __init__.py  __main__.py
src/claude_code_tracer/api/: dependencies.py  main.py
src/claude_code_tracer/api/routes/: __init__.py  analytics.py  interactions.py  sessions.py
src/claude_code_tracer/core/: __init__.py  monitor.py  monitor_v2.py  privacy.py  pty_monitor.py
src/claude_code_tracer/models/: __init__.py  interaction.py  session.py
src/claude_code_tracer/services/: supabase.py
src/claude_code_tracer/utils/: __init__.py  config.py  logging.py
